--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,21 @@ jobs:
         with:
           name: BlurElysiumSlider
           path: ${{ github.workspace }}
+
+  deploy-store:
+    # @todo Add a condition to only run this job when there is a tag
+    # if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: build-extension
+    steps:
+      - name: Get extension artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: BlurElysiumSlider
+
+      - name: Install shopware-cli
+        uses: shopware/shopware-cli-action@v1
+
+      - name: Test install extension
+        run: |
+          ls -la && pwd
