--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,14 @@ jobs:
           name: BlurElysiumSlider
           path: ${{ github.workspace }}
 
-  deploy-store:
+  deploy-extension-to-store:
     # @todo Add a condition to only run this job when there is a tag
     # if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: build-extension
     steps:
       - name: Get extension artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: BlurElysiumSlider
 
