--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,10 @@ jobs:
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v1
 
-      - name: Test install extension
+      - name: Debug files
         run: |
           ls -la && pwd
+
+      - name: Auth Shopware Store
+        run: |
+          shopware-cli account login
