--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
     # if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: build-extension
+    env:
+      SHOPWARE_CLI_ACCOUNT_EMAIL: TEST
+      SHOPWARE_CLI_ACCOUNT_PASSWORD: TEST
     steps:
       - name: Get extension artifact
         uses: actions/download-artifact@v4
