--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         run: | 
           shopware-cli extension build ${{ github.workspace }}
           rm -rf .devops
+          mkdir BlurElysiumSlider && mv * BlurElysiumSlider
 
       - name: Upload as artifact
         uses: actions/upload-artifact@v4
@@ -61,7 +62,7 @@ jobs:
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v1
 
-      - name: Debug files
+      - name: Create zip
         run: |
           ls -la && pwd
 
