--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,9 @@ jobs:
 
       - name: Create zip
         run: |
+          zip -r BlurElysiumSlider.zip BlurElysiumSlider
           ls -la && pwd
+          unzip -l BlurElysiumSlider.zip
 
       - name: Auth Shopware Store
         run: |
