--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,38 @@ jobs:
         run: | 
           shopware-cli extension build ${{ github.workspace }}
           rm -rf .devops
+          shopt -s extglob
+          mkdir BlurElysiumSlider
+          mv !(BlurElysiumSlider) BlurElysiumSlider/
 
       - name: Upload as artifact
         uses: actions/upload-artifact@v4
         with:
           name: BlurElysiumSlider
           path: ${{ github.workspace }}
+
+  deploy-extension-to-store:
+    # @todo Add a condition to only run this job when there is a tag
+    # if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: build-extension
+    env:
+      SHOPWARE_CLI_ACCOUNT_EMAIL: ${{ secrets.SHOPWARE_CLI_ACCOUNT_EMAIL }}
+      SHOPWARE_CLI_ACCOUNT_PASSWORD: ${{ secrets.SHOPWARE_CLI_ACCOUNT_PASSWORD }}
+    steps:
+      - name: Get extension artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: BlurElysiumSlider
+
+      - name: Install shopware-cli
+        uses: shopware/shopware-cli-action@v1
+
+      - name: Create zip
+        run: |
+          zip -rq BlurElysiumSlider.zip BlurElysiumSlider
+
+      - name: Deploy extension to store
+        run: |
+          ls -la
+          shopware-cli account login
