--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,7 @@ jobs:
           path: ${{ github.workspace }}
 
   deploy-extension-to-store:
-    # @todo Add a condition to only run this job when there is a tag
-    # if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: build-extension
     env:
@@ -70,5 +69,4 @@ jobs:
 
       - name: Deploy extension to store
         run: |
-          ls -la
-          shopware-cli account login
+          shopware-cli account producer extension upload BlurElysiumSlider.zip
