--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          sparse-checkout: |
+            CHANGELOG.md
+            CHANGELOG_de-DE.md
+          sparse-checkout-cone-mode: false
 
       - name: Test
         run: |
