--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Test
         run: |
-          find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.md" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.md" -delete
+          find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.md" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.md" ! -path "${{ github.workspace }}/package.json" -delete
+          find /pfad -type d -empty -delete
           node -v
           ls -la
           pwd
