--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,33 @@ jobs:
           echo "${{ github.workspace }}"
           shopware-cli extension validate ${{ github.workspace }}
 
+  build-changelog:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          sparse-checkout: |
+            CHANGELOG.md
+            CHANGELOG_de-DE.md
+          sparse-checkout-cone-mode: false
+
+      - name: Test
+        run: |
+          find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.md" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.md" ! -path "${{ github.workspace }}/package.json" -delete
+          find ${{ github.workspace }} -type d -empty -delete
+          npm install
+          npm run md:changelog
+          find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.html" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.html" -delete
+          ls -la
+
+      - name: Upload as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: changelog
+          path: ${{ github.workspace }}
+
   build-extension:
     runs-on: ubuntu-latest
     needs: validate
