--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:administration:fix": "eslint --ext .ts,.vue --fix src/Resources/app/administration/src",
     "lint:storefront": "eslint --ext .js,.ts,.vue src/Resources/app/storefront/src",
     "lint:storefront:fix": "eslint --ext .js,.ts,.vue --fix src/Resources/app/storefront/src",
-    "md:changelog": "marked-it-cli changelog/ --output=changelog/.mdout --overwrite",
+    "md:changelog": "marked-it-cli ./ --output=./ --overwrite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Robert Bisovski",
