--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/webpack-env": "^1.18.5",
-    "tsconfig-paths-webpack-plugin": "^4.1.0"
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "vite": "^6.2.3"
   }
 }
