admin: fix icon resolution in blur-icon component

--- a/src/Resources/app/administration/tsconfig.json
+++ b/src/Resources/app/administration/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "downlevelIteration": true,
+    "module": "es2022",
     "types": [
       "@types/webpack-env"
     ],
