--- a/src/Resources/app/administration/tsconfig.json
+++ b/src/Resources/app/administration/tsconfig.json
@@ -15,7 +15,7 @@
     "baseUrl": "./",
     "paths": {
       "@elysium/*": [
-        "*"
+        "./src/*"
       ],
       "shopware/*": [
         "../../../../../../../vendor/shopware/administration/Resources/app/administration/src/*"
