chore: build files

--- a/src/Resources/public/administration/.vite/manifest.json
+++ b/src/Resources/public/administration/.vite/manifest.json
@@ -6,7 +6,7 @@
     "isDynamicEntry": true
   },
   "component/cms/blocks/blur-elysium-banner/preview/index.ts": {
-    "file": "assets/index-BMk21XJU.js",
+    "file": "assets/index-DfztRisn.js",
     "name": "index",
     "src": "component/cms/blocks/blur-elysium-banner/preview/index.ts",
     "isDynamicEntry": true
@@ -18,7 +18,7 @@
     "isDynamicEntry": true
   },
   "component/cms/blocks/blur-elysium-slider/preview/index.ts": {
-    "file": "assets/index-DGXL_FR-.js",
+    "file": "assets/index-PLAjWca0.js",
     "name": "index",
     "src": "component/cms/blocks/blur-elysium-slider/preview/index.ts",
     "isDynamicEntry": true
@@ -30,13 +30,13 @@
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-banner/config/index.ts": {
-    "file": "assets/index-BRX334_2.js",
+    "file": "assets/index-Bzco55ZW.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-banner/config/index.ts",
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-banner/preview/index.ts": {
-    "file": "assets/index-BGAlKpds.js",
+    "file": "assets/index-CU9hDNwy.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-banner/preview/index.ts",
     "isDynamicEntry": true
@@ -48,25 +48,25 @@
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-slider/config/arrows/index.ts": {
-    "file": "assets/index-CWUvJp9T.js",
+    "file": "assets/index-D0rxwZZz.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-slider/config/arrows/index.ts",
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-slider/config/navigation/index.ts": {
-    "file": "assets/index-DZA3CT34.js",
+    "file": "assets/index-DaCuDwPI.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-slider/config/navigation/index.ts",
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-slider/config/sizing/index.ts": {
-    "file": "assets/index-i9-Tfo4E.js",
+    "file": "assets/index-BhVaxB5i.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-slider/config/sizing/index.ts",
     "isDynamicEntry": true
   },
   "component/cms/elements/blur-elysium-slider/preview/index.ts": {
-    "file": "assets/index-C6H0bkd3.js",
+    "file": "assets/index-D-yLnmVX.js",
     "name": "index",
     "src": "component/cms/elements/blur-elysium-slider/preview/index.ts",
     "isDynamicEntry": true
@@ -219,7 +219,7 @@
     "isDynamicEntry": true
   },
   "component/slides/overview/index.ts": {
-    "file": "assets/index-CFwM329y.js",
+    "file": "assets/index-CjFSGGj3.js",
     "name": "index",
     "src": "component/slides/overview/index.ts",
     "isDynamicEntry": true,
@@ -336,7 +336,7 @@
     ]
   },
   "extension/sw-media-quickinfo-usage/index.ts": {
-    "file": "assets/index-N71l14gF.js",
+    "file": "assets/index-C5Ve5o9E.js",
     "name": "index",
     "src": "extension/sw-media-quickinfo-usage/index.ts",
     "isDynamicEntry": true,
@@ -354,7 +354,7 @@
     "isDynamicEntry": true
   },
   "main.ts": {
-    "file": "assets/blur-elysium-slider-CXAFUG8p.js",
+    "file": "assets/blur-elysium-slider-BFLSz6w5.js",
     "name": "blur-elysium-slider",
     "src": "main.ts",
     "isEntry": true,
