--- a/.shopware-extension.yml
+++ b/.shopware-extension.yml
@@ -33,11 +33,43 @@ store:
   highlights:
     de: 
       - file:store/de/highlight-1.md
+      - file:store/de/highlight-2.md
+      - file:store/de/highlight-3.md
+      - file:store/de/highlight-4.md
     en: 
       - file:store/en/highlight-1.md
+      - file:store/en/highlight-2.md
+      - file:store/en/highlight-3.md
+      - file:store/en/highlight-4.md
   features:
-    de: file:store/de/features.md
-    en: file:store/en/features.md
+    de:
+      - "🌐 Flexible, responsive Layouts mit der Elysium-Sektion für Erlebniswelten"
+      - "🎛️ Slides mit umfangreichen Inhalts- und Darstellungsoptionen"
+      - "🔍 SEO-Banner mit responsivem Layout: Überschrift, Beschreibung und Link individuell festlegbar – inkl. H-Element und HTML-Tags"
+      - "🎥 Slide-Cover mit Videos, Bildern, Farben oder Farbverläufen möglich"
+      - "🖼️ Bild-Banner gerätespezifisch anpassbar für Smartphone, Tablet und Desktop"
+      - "🔗 Individuelle Slide-Verlinkung per Button oder vollflächig – mit relativen, absoluten URLs oder Sprungmarken"
+      - "🛍️ Produkte mit Slides verknüpfen: Inhalte wie Bild, Name, Beschreibung und Link automatisch übernehmen oder manuell überschreiben"
+      - "🧩 Eigene Slide-Templates per Twig-Datei erstellen – wiederverwendbar und anpassbar"
+      - "➕ Slides über Zusatzfeld-Sets erweiterbar um eigene Inhalte wie Bilder oder Texte"
+      - "🧱 Slides flexibel platzierbar in Slider- oder Banner-Elementen einer Erlebniswelt"
+      - "⚙️ Slider-Element anpassbar: Autoplay, Navigation, Abstände und sichtbare Slides je Gerät frei definierbar"
+      - "📐 Optimale Darstellung durch gerätespezifisch anpassbares Seitenverhältnis statt fixer Größen"
+      - "🚀 Lighthouse-optimiert: Picture-Tag, Lazy Loading, Thumbnails und feste Seitenverhältnisse für Top-Performance und weniger Layout-Shifts"
+    en:
+      - "🌐 Flexible, responsive layouts with the Elysium section for Shopping Experience"
+      - "🎛️ Slides with extensive content and display options"
+      - "🔍 SEO banner with responsive layout: headline, description, and link individually configurable – including H-element and HTML tags"
+      - "🎥 Slide cover with videos, images, colors, or gradients possible"
+      - "🖼️ Image banner adaptable for smartphone, tablet, and desktop"
+      - "🔗 Individual slide linking via button or full-surface – with relative, absolute URLs, or anchor links"
+      - "🛍️ Link products with slides: automatically adopt content like image, name, description, and link or manually override"
+      - "🧩 Create custom slide templates via Twig file – reusable and customizable"
+      - "➕ Extend slides with additional field sets for custom content like images or text"
+      - "🧱 Slides flexibly placeable in slider or banner elements of a Shopping Experience"
+      - "⚙️ Slider element customizable: autoplay, navigation, spacing, and visible slides per device freely definable"
+      - "📐 Optimal display through device-specific adjustable aspect ratio instead of fixed sizes"
+      - "🚀 Lighthouse-optimized: picture tag, lazy loading, thumbnails, and fixed aspect ratios for top performance and fewer layout shifts"
   faq:
     de: 
       - question: Wie wird die kostenfreie Version der Elysium Erweiterung unterstützt
