chore(ci): quick-fix validate job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Validate plugin
         run: |
           echo "${{ github.workspace }}"
+          rm -rf .devops .eslintrc.js .eslintignore
           shopware-cli extension validate ${{ github.workspace }}
 
   build-changelog:
