--- a/.shopware-extension.yml
+++ b/.shopware-extension.yml
@@ -32,46 +32,48 @@ store:
     en: file:store/en/description.md
   highlights:
     de: 
-      - file:store/de/highlight-1.md
-      - file:store/de/highlight-2.md
-      - file:store/de/highlight-3.md
-      - file:store/de/highlight-4.md
+      - "Erlebniswelten Sektion — Mit den Elysium Sektionen bringst du maximale Flexibilität und Freiheit in deine Erlebniswelten. Anders als herkömmliche, starre Layout-Blöcke ermöglichen dir die Elysium Sektionen eine völlig freie und responsive Gestaltung. Per einfachem Ziehen mit der Maus kannst du die Breite einzelner Blöcke anpassen, Reihen zusammenführen und die visuelle Reihenfolge bestimmen. Alles innerhalb des Erlebniswelten Editors."
+      - "Slide Builder — Mit dem Slide Builder können voll responsive und wiederverwendbare Slides erstellt werden. Slides werden in Banner- und Slider-Elementen einer Erlebniswelt verknüpft. Der Slide Builder ermöglicht es dir, sowohl einfache 'Image only' Banner als auch komplexe SEO-Banner zu erstellen. Auch ohne Kenntnisse von Grafikprogrammen oder Programmierung lassen sich ansprechende Slides gestalten."
+      - "Slider und Banner Elemente — In der Erlebniswelten Block-Auswahl findest du unter der Kategorie Elysium Blöcke die Elemente Elysium Slider und Banner. Diese Elemente ermöglichen es dir, Slides aus dem Slide Builder zu verknüpfen und bieten zusätzliche Einstellungsmöglichkeiten. In beiden Elementen kannst du die Größe der Slides festlegen. Das Slider Element bietet darüber hinaus spezifische Slider Einstellungen."
+      - "Mobile-first Geräteeinstellungen — Elysium bietet geräteabhängige Einstellungen, die für Smartphone-, Tablet- und Desktop-Ansichten angepasst werden können. Der Mobile-first Ansatz wird dabei konsequent verfolgt. Einstellungen werden von der Smartphone-Ansicht ausgehend auf alle anderen Ansichten vererbt. Dadurch müssen geräteabhängige Einstellungen nicht für jede Ansicht separat gepflegt werden, mit nur wenigen Ausnahmen."
     en: 
-      - file:store/en/highlight-1.md
-      - file:store/en/highlight-2.md
-      - file:store/en/highlight-3.md
-      - file:store/en/highlight-4.md
+      - "Shopping Experience Section — With the Elysium Sections, you bring maximum flexibility and freedom to your Shopping Experience. Unlike conventional, rigid layout blocks, Elysium Sections allow you completely free and responsive design. By simply dragging with the mouse, you can adjust the width of individual blocks, merge rows, and determine the visual order. All within the Shopping Experience editor."
+      - "Slide Builder — With the Slide Builder, fully responsive and reusable slides can be created. Slides are linked in banner and slider elements of an Shopping Experience. The Slide Builder allows you to create both simple 'image only' banners and complex SEO banners. Attractive slides can be designed even without knowledge of graphic programs or programming."
+      - "Slider and Banner Elements — In the hopping Experience block selection, you will find the elements Elysium Slider and Banner under the category Elysium Blocks. These elements allow you to link slides from the Slide Builder and offer additional configuration options. In both elements, you can define the size of the slides. The Slider element also provides specific slider settings."
+      - "Mobile-first Device Settings — Elysium offers device-dependent settings that can be adjusted for smartphone, tablet, and desktop views. The mobile-first approach is consistently followed. Settings are inherited from the smartphone view to all other views. As a result, device-dependent settings do not need to be maintained separately for each view, with only a few exceptions."
   features:
     de:
-      - "🌐 Flexible, responsive Layouts mit der Elysium-Sektion für Erlebniswelten"
-      - "🎛️ Slides mit umfangreichen Inhalts- und Darstellungsoptionen"
-      - "🔍 SEO-Banner mit responsivem Layout: Überschrift, Beschreibung und Link individuell festlegbar – inkl. H-Element und HTML-Tags"
-      - "🎥 Slide-Cover mit Videos, Bildern, Farben oder Farbverläufen möglich"
-      - "🖼️ Bild-Banner gerätespezifisch anpassbar für Smartphone, Tablet und Desktop"
-      - "🔗 Individuelle Slide-Verlinkung per Button oder vollflächig – mit relativen, absoluten URLs oder Sprungmarken"
-      - "🛍️ Produkte mit Slides verknüpfen: Inhalte wie Bild, Name, Beschreibung und Link automatisch übernehmen oder manuell überschreiben"
-      - "🧩 Eigene Slide-Templates per Twig-Datei erstellen – wiederverwendbar und anpassbar"
-      - "➕ Slides über Zusatzfeld-Sets erweiterbar um eigene Inhalte wie Bilder oder Texte"
-      - "🧱 Slides flexibel platzierbar in Slider- oder Banner-Elementen einer Erlebniswelt"
-      - "⚙️ Slider-Element anpassbar: Autoplay, Navigation, Abstände und sichtbare Slides je Gerät frei definierbar"
-      - "📐 Optimale Darstellung durch gerätespezifisch anpassbares Seitenverhältnis statt fixer Größen"
-      - "🚀 Lighthouse-optimiert: Picture-Tag, Lazy Loading, Thumbnails und feste Seitenverhältnisse für Top-Performance und weniger Layout-Shifts"
+      - "Flexible, responsive Layouts mit der Elysium-Sektion für Erlebniswelten"
+      - "Slides mit umfangreichen Inhalts- und Darstellungsoptionen"
+      - "SEO-Banner mit responsivem Layout: Überschrift, Beschreibung und Link individuell festlegbar – inkl. H-Element und HTML-Tags"
+      - "Slide-Cover mit Videos, Bildern, Farben oder Farbverläufen möglich"
+      - "Bild-Banner gerätespezifisch anpassbar für Smartphone, Tablet und Desktop"
+      - "Individuelle Slide-Verlinkung per Button oder vollflächig – mit relativen, absoluten URLs oder Sprungmarken"
+      - "Produkte mit Slides verknüpfen: Inhalte wie Bild, Name, Beschreibung und Link automatisch übernehmen oder manuell überschreiben"
+      - "Eigene Slide-Templates per Twig-Datei erstellen – wiederverwendbar und anpassbar"
+      - "Slides über Zusatzfeld-Sets erweiterbar um eigene Inhalte wie Bilder oder Texte"
+      - "Slides flexibel platzierbar in Slider- oder Banner-Elementen einer Erlebniswelt"
+      - "Slider-Element anpassbar: Autoplay, Navigation, Abstände und sichtbare Slides je Gerät frei definierbar"
+      - "Optimale Darstellung durch gerätespezifisch anpassbares Seitenverhältnis statt fixer Größen"
+      - "Lighthouse-optimiert: Picture-Tag, Lazy Loading, Thumbnails und feste Seitenverhältnisse für Top-Performance und weniger Layout-Shifts"
     en:
-      - "🌐 Flexible, responsive layouts with the Elysium section for Shopping Experience"
-      - "🎛️ Slides with extensive content and display options"
-      - "🔍 SEO banner with responsive layout: headline, description, and link individually configurable – including H-element and HTML tags"
-      - "🎥 Slide cover with videos, images, colors, or gradients possible"
-      - "🖼️ Image banner adaptable for smartphone, tablet, and desktop"
-      - "🔗 Individual slide linking via button or full-surface – with relative, absolute URLs, or anchor links"
-      - "🛍️ Link products with slides: automatically adopt content like image, name, description, and link or manually override"
-      - "🧩 Create custom slide templates via Twig file – reusable and customizable"
-      - "➕ Extend slides with additional field sets for custom content like images or text"
-      - "🧱 Slides flexibly placeable in slider or banner elements of a Shopping Experience"
-      - "⚙️ Slider element customizable: autoplay, navigation, spacing, and visible slides per device freely definable"
-      - "📐 Optimal display through device-specific adjustable aspect ratio instead of fixed sizes"
-      - "🚀 Lighthouse-optimized: picture tag, lazy loading, thumbnails, and fixed aspect ratios for top performance and fewer layout shifts"
+      - "Flexible, responsive layouts with the Elysium section for Shopping Experience"
+      - "Slides with extensive content and display options"
+      - "SEO banner with responsive layout: headline, description, and link individually configurable – including H-element and HTML tags"
+      - "Slide cover with videos, images, colors, or gradients possible"
+      - "Image banner adaptable for smartphone, tablet, and desktop"
+      - "Individual slide linking via button or full-surface – with relative, absolute URLs, or anchor links"
+      - "Link products with slides: automatically adopt content like image, name, description, and link or manually override"
+      - "Create custom slide templates via Twig file – reusable and customizable"
+      - "Extend slides with additional field sets for custom content like images or text"
+      - "Slides flexibly placeable in slider or banner elements of a Shopping Experience"
+      - "Slider element customizable: autoplay, navigation, spacing, and visible slides per device freely definable"
+      - "Optimal display through device-specific adjustable aspect ratio instead of fixed sizes"
+      - "Lighthouse-optimized: picture tag, lazy loading, thumbnails, and fixed aspect ratios for top performance and fewer layout shifts"
   faq:
     de: 
       - question: Wie wird die kostenfreie Version der Elysium Erweiterung unterstützt
         answer: Diese kostenfreie Version der Elysium Erweiterung erhält nicht priorisierte Fehlerbehebungen und Kompatibilität Updates. Nur die aktuellste Major Version der Erweiterung, welche jeweils mit der aktuellsten Shopware Version kompatibel ist, erhält Updates. Außerdem wird kein Support garantiert und es wird keine Funktionserweiterungen geben.
-    en: []
+    en: 
+      - question: How is the free version of the Elysium extension supported?
+        answer: This free version of the Elysium extension receives non-prioritized bug fixes and compatibility updates. Only the latest major version of the extension, which is compatible with the latest Shopware version, will receive updates. Additionally, no support is guaranteed, and there will be no feature extensions.
