--- a/src/Resources/public/administration/.vite/manifest.json
+++ b/src/Resources/public/administration/.vite/manifest.json
@@ -107,18 +107,6 @@
     "src": "component/form/colorpicker/index.ts",
     "isDynamicEntry": true
   },
-  "component/form/device-number-input/index.ts": {
-    "file": "assets/index-lljiMCqX.js",
-    "name": "index",
-    "src": "component/form/device-number-input/index.ts",
-    "isDynamicEntry": true
-  },
-  "component/form/device-select-input/index.ts": {
-    "file": "assets/index-Cx6GL-2l.js",
-    "name": "index",
-    "src": "component/form/device-select-input/index.ts",
-    "isDynamicEntry": true
-  },
   "component/form/device-switch/index.ts": {
     "file": "assets/index-CWjqad5D.js",
     "name": "index",
@@ -146,6 +134,12 @@
     "src": "component/form/text-input/index.ts",
     "isDynamicEntry": true
   },
+  "component/iap/subscription-card/index.ts": {
+    "file": "assets/index-CCeGaMhW.js",
+    "name": "index",
+    "src": "component/iap/subscription-card/index.ts",
+    "isDynamicEntry": true
+  },
   "component/icon/index.ts": {
     "file": "assets/index-D-xc01Ow.js",
     "name": "index",
@@ -153,7 +147,7 @@
     "isDynamicEntry": true
   },
   "component/settings/index.ts": {
-    "file": "assets/index-CM-zaB-y.js",
+    "file": "assets/index-DAmMKQY0.js",
     "name": "index",
     "src": "component/settings/index.ts",
     "isDynamicEntry": true
@@ -219,7 +213,7 @@
     "isDynamicEntry": true
   },
   "component/slides/overview/index.ts": {
-    "file": "assets/index-Dke9s80a.js",
+    "file": "assets/index-CnnZV4YU.js",
     "name": "index",
     "src": "component/slides/overview/index.ts",
     "isDynamicEntry": true,
@@ -326,6 +320,12 @@
     "src": "extension/sw-cms-section/index.ts",
     "isDynamicEntry": true
   },
+  "extension/sw-cms-sidebar/index.ts": {
+    "file": "assets/index-C0buu8uT.js",
+    "name": "index",
+    "src": "extension/sw-cms-sidebar/index.ts",
+    "isDynamicEntry": true
+  },
   "extension/sw-cms-stage-section-selection/index.ts": {
     "file": "assets/index-CCjc1hpM.js",
     "name": "index",
@@ -336,7 +336,7 @@
     ]
   },
   "extension/sw-media-quickinfo-usage/index.ts": {
-    "file": "assets/index-CA-8gunq.js",
+    "file": "assets/index-57NFTwR-.js",
     "name": "index",
     "src": "extension/sw-media-quickinfo-usage/index.ts",
     "isDynamicEntry": true,
@@ -354,7 +354,7 @@
     "isDynamicEntry": true
   },
   "main.ts": {
-    "file": "assets/blur-elysium-slider-C20HBXqs.js",
+    "file": "assets/blur-elysium-slider-DUkndJTF.js",
     "name": "blur-elysium-slider",
     "src": "main.ts",
     "isEntry": true,
@@ -371,19 +371,16 @@
       "component/cms/blocks/blur-elysium-slider/preview/index.ts",
       "component/cms/blocks/blur-elysium-banner/component/index.ts",
       "component/cms/blocks/blur-elysium-banner/preview/index.ts",
-      "extension/sw-search-bar-item/index.ts",
-      "extension/sw-media-quickinfo-usage/index.ts",
       "component/icon/index.ts",
       "component/utilities/section/index.ts",
       "component/utilities/column/index.ts",
+      "component/iap/subscription-card/index.ts",
       "component/utilities/card-title/index.ts",
       "component/form/device-switch/index.ts",
       "component/form/text-input/index.ts",
       "component/form/number-input/index.ts",
       "component/form/select-input/index.ts",
       "component/form/colorpicker/index.ts",
-      "component/form/device-number-input/index.ts",
-      "component/form/device-select-input/index.ts",
       "component/utilities/block-two-col-config/index.ts",
       "component/utilities/icon/index.ts",
       "component/settings/index.ts",
@@ -406,12 +403,15 @@
       "component/utilities/slide-search/index.ts",
       "component/utilities/slide-selection/index.ts",
       "component/utilities/cms-slide-skeleton/index.ts",
-      "extension/sw-cms-section/index.ts",
-      "extension/sw-cms-stage-section-selection/index.ts",
       "component/cms/section/index.ts",
       "component/cms/section/add-block/index.ts",
       "component/cms/section/settings/index.ts",
-      "component/cms/section/block-settings/index.ts"
+      "component/cms/section/block-settings/index.ts",
+      "extension/sw-cms-sidebar/index.ts",
+      "extension/sw-search-bar-item/index.ts",
+      "extension/sw-media-quickinfo-usage/index.ts",
+      "extension/sw-cms-section/index.ts",
+      "extension/sw-cms-stage-section-selection/index.ts"
     ],
     "css": [
       "assets/blur-elysium-slider-CZ78iiWQ.css"
