--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - fix/*
     tags:
       - '*'
   pull_request:
@@ -24,7 +25,7 @@ jobs:
       - name: Validate plugin
         run: |
           find ${{ github.workspace }} -type f \( -name ".eslintrc.js" -o -name ".eslintignore" -o -name ".gitkeep" \) -delete
-          rm -rf .devops
+          rm -rf .devops .github store
           shopware-cli extension validate ${{ github.workspace }}
 
       - name: Upload validated directory
@@ -81,9 +82,9 @@ jobs:
           path: ${{ github.workspace }}
 
   deploy-extension-to-store:
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    needs: build-extension
+    needs: validate
     env:
       SHOPWARE_CLI_ACCOUNT_EMAIL: ${{ secrets.SHOPWARE_CLI_ACCOUNT_EMAIL }}
       SHOPWARE_CLI_ACCOUNT_PASSWORD: ${{ secrets.SHOPWARE_CLI_ACCOUNT_PASSWORD }}
@@ -91,18 +92,22 @@ jobs:
       - name: Get extension artifact
         uses: actions/download-artifact@v4
         with:
-          name: BlurElysiumSlider
+          name: validated-plugin
 
-      - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+      # - name: Install shopware-cli
+      #   uses: shopware/shopware-cli-action@v1
 
-      - name: Create zip
+      - name: debug
         run: |
-          zip -rq BlurElysiumSlider.zip BlurElysiumSlider
+          ls -la ${{ github.workspace }}
 
-      - name: Deploy extension to store
-        run: |
-          shopware-cli account producer extension upload BlurElysiumSlider.zip
+      # - name: Create zip
+      #   run: |
+      #     zip -rq BlurElysiumSlider.zip BlurElysiumSlider
+
+      # - name: Deploy extension to store
+      #   run: |
+      #     shopware-cli account producer extension upload BlurElysiumSlider.zip
 
   update-store-page:
     runs-on: ubuntu-latest
