--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,30 +56,30 @@ jobs:
           name: changelog
           path: ${{ github.workspace }}
 
-  build-extension:
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-      - name: Download validated directory
-        uses: actions/download-artifact@v4
-        with:
-          name: validated-plugin
+  # build-extension:
+  #   runs-on: ubuntu-latest
+  #   needs: validate
+  #   steps:
+  #     - name: Download validated directory
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: validated-plugin
 
-      - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+  #     - name: Install shopware-cli
+  #       uses: shopware/shopware-cli-action@v1
 
-      - name: Build extension
-        run: | 
-          shopware-cli extension build ${{ github.workspace }}
-          shopt -s extglob
-          mkdir BlurElysiumSlider
-          mv !(BlurElysiumSlider) BlurElysiumSlider/
+  #     - name: Build extension
+  #       run: | 
+  #         shopware-cli extension build ${{ github.workspace }}
+  #         shopt -s extglob
+  #         mkdir BlurElysiumSlider
+  #         mv !(BlurElysiumSlider) BlurElysiumSlider/
 
-      - name: Upload as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: BlurElysiumSlider
-          path: ${{ github.workspace }}
+  #     - name: Upload as artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: BlurElysiumSlider
+  #         path: ${{ github.workspace }}
 
   deploy-extension-to-store:
     # if: startsWith(github.ref, 'refs/tags/')
@@ -101,13 +101,21 @@ jobs:
         run: |
           ls -la ${{ github.workspace }}
 
-      # - name: Create zip
-      #   run: |
-      #     zip -rq BlurElysiumSlider.zip BlurElysiumSlider
+      - name: Create zip
+        run: |
+          mkdir -p BlurElysiumSlider
+          mv ${{ github.workspace }} BlurElysiumSlider/
+          zip -rq BlurElysiumSlider.zip BlurElysiumSlider
 
       # - name: Deploy extension to store
       #   run: |
       #     shopware-cli account producer extension upload BlurElysiumSlider.zip
+
+      - name: Upload as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlurElysiumSlider
+          path: ${{ github.workspace }}
 
   update-store-page:
     runs-on: ubuntu-latest
