--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Create zip
         run: |
           mkdir -p BlurElysiumSlider
-          mv ${{ github.workspace }} BlurElysiumSlider/
+          mv ${{ github.workspace }}/* BlurElysiumSlider/
           zip -rq BlurElysiumSlider.zip BlurElysiumSlider
 
       # - name: Deploy extension to store
