--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,8 +103,9 @@ jobs:
 
       - name: Create zip
         run: |
-          mkdir -p BlurElysiumSlider
-          cp -r ${{ github.workspace }}/* BlurElysiumSlider/
+          shopt -s extglob
+          mkdir BlurElysiumSlider
+          mv !(BlurElysiumSlider) BlurElysiumSlider/
           zip -rq BlurElysiumSlider.zip BlurElysiumSlider
 
       # - name: Deploy extension to store
