--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,11 @@ jobs:
 
       - name: Validate plugin
         run: |
+          ls -la ${{ github.workspace }}
           find ${{ github.workspace }} -type f \( -name ".eslintrc.js" -o -name ".eslintignore" -o -name ".gitkeep" \) -delete
           rm -rf .devops .github store
           shopware-cli extension validate ${{ github.workspace }}
+          ls -la ${{ github.workspace }}
 
       - name: Upload validated directory
         uses: actions/upload-artifact@v4
