set hidden file flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,10 @@ jobs:
       - name: Upload validated directory
         uses: actions/upload-artifact@v4
         with:
+          include-hidden-files: true
           name: validated-plugin
           path: |
+            include-hidden-files: true
             ${{ github.workspace }}
             **/.*
 
