--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - fix/*
     tags:
       - '*'
   pull_request:
@@ -88,7 +87,7 @@ jobs:
   #         path: ${{ github.workspace }}
 
   deploy-extension-to-store:
-    # if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: validate
     env:
@@ -108,9 +107,9 @@ jobs:
           shopware-cli extension zip --disable-git ${{ github.workspace }}
           ls -la ${{ github.workspace }}
 
-      # - name: Deploy extension to store
-      #   run: |
-      #     shopware-cli account producer extension upload BlurElysiumSlider.zip
+      - name: Deploy extension to store
+        run: |
+          shopware-cli account producer extension upload BlurElysiumSlider.zip
 
       - name: Upload as artifact
         uses: actions/upload-artifact@v4
