--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,21 @@ jobs:
 
       - name: Validate plugin
         run: |
+          ls -la ${{ github.workspace }}
           find ${{ github.workspace }} -type f \( -name ".eslintrc.js" -o -name ".eslintignore" -o -name ".gitkeep" \) -delete
-          rm -rf .devops
+          rm -rf .devops .github .git .gitignore store
           shopware-cli extension validate ${{ github.workspace }}
+          ls -la ${{ github.workspace }}
 
       - name: Upload validated directory
         uses: actions/upload-artifact@v4
         with:
+          include-hidden-files: true
           name: validated-plugin
-          path: ${{ github.workspace }}
+          path: |
+            ${{ github.workspace }}
+            '.*'
+            **/.*
 
   build-changelog:
     runs-on: ubuntu-latest
@@ -55,35 +61,35 @@ jobs:
           name: changelog
           path: ${{ github.workspace }}
 
-  build-extension:
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-      - name: Download validated directory
-        uses: actions/download-artifact@v4
-        with:
-          name: validated-plugin
+  # build-extension:
+  #   runs-on: ubuntu-latest
+  #   needs: validate
+  #   steps:
+  #     - name: Download validated directory
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: validated-plugin
 
-      - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+  #     - name: Install shopware-cli
+  #       uses: shopware/shopware-cli-action@v1
 
-      - name: Build extension
-        run: | 
-          shopware-cli extension build ${{ github.workspace }}
-          shopt -s extglob
-          mkdir BlurElysiumSlider
-          mv !(BlurElysiumSlider) BlurElysiumSlider/
+  #     - name: Build extension
+  #       run: | 
+  #         shopware-cli extension build ${{ github.workspace }}
+  #         shopt -s extglob
+  #         mkdir BlurElysiumSlider
+  #         mv !(BlurElysiumSlider) BlurElysiumSlider/
 
-      - name: Upload as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: BlurElysiumSlider
-          path: ${{ github.workspace }}
+  #     - name: Upload as artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: BlurElysiumSlider
+  #         path: ${{ github.workspace }}
 
   deploy-extension-to-store:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    needs: build-extension
+    needs: validate
     env:
       SHOPWARE_CLI_ACCOUNT_EMAIL: ${{ secrets.SHOPWARE_CLI_ACCOUNT_EMAIL }}
       SHOPWARE_CLI_ACCOUNT_PASSWORD: ${{ secrets.SHOPWARE_CLI_ACCOUNT_PASSWORD }}
@@ -91,18 +97,25 @@ jobs:
       - name: Get extension artifact
         uses: actions/download-artifact@v4
         with:
-          name: BlurElysiumSlider
+          name: validated-plugin
 
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v1
 
-      - name: Create zip
+      - name: build and zip
         run: |
-          zip -rq BlurElysiumSlider.zip BlurElysiumSlider
+          shopware-cli extension zip --disable-git ${{ github.workspace }}
+          ls -la ${{ github.workspace }}
 
       - name: Deploy extension to store
         run: |
           shopware-cli account producer extension upload BlurElysiumSlider.zip
+
+      - name: Upload as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlurElysiumSlider
+          path: ${{ github.workspace }}/BlurElysiumSlider.zip
 
   update-store-page:
     runs-on: ubuntu-latest
