chore(ci): add --full validation extension flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           ls -la ${{ github.workspace }}
           find ${{ github.workspace }} -type f \( -name ".eslintrc.js" -o -name ".eslintignore" -o -name ".gitkeep" \) -delete
           rm -rf .devops .github .git .gitignore store
-          shopware-cli extension validate ${{ github.workspace }}
+          shopware-cli extension validate --full --reporter github ${{ github.workspace }}
           ls -la ${{ github.workspace }}
 
       - name: Upload validated directory
