--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@splidejs/splide": "^4.1.4"
+        "@splidejs/splide": "^4.1.4",
+        "swiper": "^11.2.10"
     }
 }
