--- a/.shopware-extension.yml
+++ b/.shopware-extension.yml
@@ -1,3 +1,6 @@
+changelog:
+  enabled: true
+
 validation:
   ignore:
     - message: 'Internal error: Class Shopware\Administration\Notification\NotificationService was not found while trying to analyse it'
