fix: shopware-cli build assets setting

--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elysium-slider/storefront",
+    "name": "@elysium/storefront",
     "version": "1.0.0",
     "description": "",
     "scripts": {
