--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "administration",
+    "name": "@elysium/administration",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
