--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v1
+        env:
+          SHOPWARE_CLI_VERSION: 0.6.19
 
       - name: Validate plugin
         run: |
