--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -14,6 +14,7 @@
         "@types/node": "^24.0.7"
     },
     "dependencies": {
+        "@shopware-ag/meteor-component-library": "^4.24.0",
         "vite": "^6.3.5"
     }
 }
