--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Validate plugin
         run: |
           find ${{ github.workspace }} -type f \( -name ".eslintrc.js" -o -name ".eslintignore" -o -name ".gitkeep" \) -delete
-          rm -rf .devops .changelogs .github .git .gitignore store
+          rm -rf .devops .changelogs .github .git .gitignore .vscode store opencode.jsonc AGENTS.md 
           shopware-cli extension validate --full --reporter github ${{ github.workspace }}
 
       - name: Upload validated directory
